@@ -1,3 +1,7 @@
+2004-10-06 Bart Hakvoort  <gparted@users.sf.net>
+
+	* implemented mk_label wherever possible (means less code, improved readability)
+
 2004-10-06  David Lodge <dave@cirt.net>
 
 	* configure.in (ALL_LINGUAS): Added "en_GB" (British English).
